hphp/hack/test/typecheck/reactive/byval_collection_as_property3.php.like_types.exp
File "byval_collection_as_property3.php", line 9, characters 7-30:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
